updated notebook (ix,iy + bandrescale fixes)

--- a/tutorial/1_AIM/aim.ipynb
+++ b/tutorial/1_AIM/aim.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Starting run with 1 MPI rank(s) at : 2020-01-29 15:45:10.918353\n"
+      "Starting run with 1 MPI rank(s) at : 2020-02-04 16:31:20.714235\n"
      ]
     }
    ],
@@ -57,7 +57,7 @@
    "outputs": [],
    "source": [
     "# Solve Parameters\n",
-    "sp = { \"T\": T, \"Lambda\": 2.0, \"Nz\": 4, \"Tmin\": 1e-6, \"keep\": 2000, \"keepenergy\": 10.0 }"
+    "sp = { \"T\": T, \"Lambda\": 2.0, \"Nz\": 4, \"Tmin\": 1e-6, \"keep\": 2000, \"keepenergy\": 10.0, \"bandrescale\": 1.0 }"
    ]
   },
   {
@@ -75,17 +75,6 @@
    "cell_type": "code",
    "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Low-level NRG Parameters\n",
-    "nrgp = { \"bandrescale\": 1.0 }\n",
-    "S.set_nrg_params(**nrgp)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -93,7 +82,7 @@
        "Greens Function G_imp with mesh Point mesh of size 2454 and target_rank 2: "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -115,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -134,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -152,14 +141,9 @@
    ],
    "source": [
     "def A_to_nparrays(A):\n",
-    "  lx = []\n",
-    "  ly = []\n",
-    "  for w in A.mesh:\n",
-    "    lx.append(float(w))\n",
-    "    ly.append(A[w][0,0].real)\n",
-    "  lx = np.array(lx)\n",
-    "  ly = np.array(ly)\n",
-    "  return lx, ly\n",
+    "    lx = np.array(list(A.mesh.values()))\n",
+    "    ly = np.array(A.data[:,0,0].real)\n",
+    "    return lx, ly\n",
     "\n",
     "# Plot the spectral function\n",
     "A_w = S.A_w['imp']\n",
