--- a/templates/2orb-UJ/QS/ham_-2.3
+++ b/templates/2orb-UJ/QS/ham_-2.3
@@ -1,5 +1,6 @@
-{{0, 0, gammaPol1, -gammaPol2, 0, 0}, {0, eps2 - coefzeta[1, 0], 0, 0, 0, 0}, 
- {gammaPol1, 0, eps1 - coefzeta[1, 0], 0, 0, gammaPol2}, 
- {-gammaPol2, 0, 0, eps2 - coefzeta[2, 0], 0, -gammaPol1}, 
- {0, 0, 0, 0, eps1 - coefzeta[2, 0], 0}, {0, 0, gammaPol2, -gammaPol1, 0, 
-  eps1 + eps2 + J12/4 + U12 - coefzeta[1, 0] - coefzeta[2, 0]}}
+{{0, 0, gammaPolCh[1], -gammaPolCh[2], 0, 0}, {0, eps2 - coefzeta[1, 0], 0, 
+  0, 0, 0}, {gammaPolCh[1], 0, eps1 - coefzeta[1, 0], 0, 0, gammaPolCh[2]}, 
+ {-gammaPolCh[2], 0, 0, eps2 - coefzeta[2, 0], 0, -gammaPolCh[1]}, 
+ {0, 0, 0, 0, eps1 - coefzeta[2, 0], 0}, {0, 0, gammaPolCh[2], 
+  -gammaPolCh[1], 0, eps1 + eps2 + J12/4 + U12 - coefzeta[1, 0] - 
+   coefzeta[2, 0]}}
